test/functions/ferguson/ref-pair/tuples/tup.good
tup.chpl:1: In function 'f':
tup.chpl:2: error: illegal lvalue in assignment
tup.chpl:16: error: illegal lvalue in assignment
